--- a/assets/sass/components/_logo.sass
+++ b/assets/sass/components/_logo.sass
@@ -1,45 +1,15 @@
 #logo
   +prevent-selection
-  +text-shadow(none)
   font-size: 1em
   margin-left: -10px
+  max-height: 7.5em
 
-  a
-    text-decoration: none !important
-    padding: 0
-    margin: 0
-
-    &:hover
-      background: transparent !important
-
-      #moustache
-        +animation(tada 1s)
-
-    &:active
-      acronym
-        color: $secondary-color
-
-  acronym
-    font-size: 8em
-    font-weight: 700
-    border-bottom: none
-    color: $primary-color
-    letter-spacing: -0.13em
-
-  strong
-    display: none
-
-  em
-    clear: both
-    display: block
-    text-align: center
-    width: 126px
-
-  #moustache
+  .mustache
+    transform-origin: center center !important
+    -webkit-transform: skewX(0)
+    z-index: 1000
     position: absolute
-    display: block
-    float: left
 
-    margin-top: -140px
-    margin-left: -31px
-    +opacity(0.9)
+
+  &:hover .mustache
+    +animation(twirl 1s ease-in-out)
