--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,36 +1,74 @@
 @font-face
   font-family: 'nshipster'
-  src: url('//cdn.nshipster.com/fonts/nshipster.eot')
-  src: url('//cdn.nshipster.com/fonts/nshipster.eot?#iefix') format("embedded-opentype"), url('//cdn.nshipster.com/fonts/nshipster.svg#nshipster') format("svg"), url('//cdn.nshipster.com/fonts/nshipster.woff') format("woff"), url('//cdn.nshipster.com/fonts/nshipster.ttf') format("truetype")
+  src: url('/fonts/nshipster.eot?chu8de')
+  src: url('/fonts/nshipster.eot?#iefixchu8de') format("embedded-opentype"), url('/fonts/nshipster.woff?chu8de') format("woff"), url('/fonts/nshipster.ttf?chu8de') format("truetype"), url('/fonts/nshipster.svg?chu8de#nshipster') format("svg")
   font-weight: normal
   font-style: normal
 
-
-/* Use the following CSS code if you want to use data attributes for inserting your icons
-
-[data-icon]:before
+[class^="icon-"], [class*=" icon-"]
   font-family: 'nshipster'
-  content: attr(data-icon)
   speak: none
-
-/* Use the following CSS code if you want to have a class per icon
-
-[class^="icon-"]:before, [class*=" icon-"]:before
-  font-family: 'nshipster'
   font-style: normal
-  speak: none
+  font-weight: normal
+  font-variant: normal
+  text-transform: none
+  line-height: 1
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+
+.icon-mustache:before
+  content: "\e600"
+
+.icon-envelope:before
+  content: "\e601"
+
+.icon-gumroad:before
+  content: "\e602"
+
+.icon-xcode:before
+  content: "\e603"
+
+.icon-cocoa:before
+  content: "\e604"
+
+.icon-objective-c:before
+  content: "\e605"
+
+.icon-osi:before
+  content: "\e606"
+
+.icon-swift:before
+  content: "\e607"
+
+.icon-mobile:before
+  content: "\e608"
+
+.icon-tablet:before
+  content: "\e609"
+
+.icon-mail:before
+  content: "\e60a"
+
+.icon-googleplus:before
+  content: "\e60b"
+
+.icon-facebook:before
+  content: "\e60c"
 
 .icon-twitter:before
-  content: "\40"
+  content: "\e60d"
 
 .icon-feed:before
-  content: "\21"
+  content: "\e60e"
 
 .icon-github:before
-  content: "\23"
-
-.icon-creative-commons:before
-  content: "\24"
+  content: "\e60f"
 
 .icon-apple:before
-  content: "\25"
+  content: "\e610"
+
+.icon-safari:before
+  content: "\e612"
+
+.icon-cc:before
+  content: "\e613"
