--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -68,7 +68,7 @@
     <meta property="st:type" content="home"/>
   {% endif %}
 
-  <script onload="try{Typekit.load();}catch(e){}" src="//use.typekit.net/agk0bgp.js"></script>
+  <!--<script onload="try{Typekit.load();}catch(e){}" src="//use.typekit.net/agk0bgp.js"></script>-->
 </head>
 
 <body>
@@ -170,7 +170,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/FitText.js/1.1/jquery.fittext.min.js"></script>
   <script>
-  $(".title").fitText();
+  $(".title").fitText(1.5);
   </script>
 </body>
 </html>
