--- a/assets/sass/_colors.sass
+++ b/assets/sass/_colors.sass
@@ -3,6 +3,6 @@ $secondary-color: #4c3150
 $tertiary-color: #dfaf25
 
 $text-color: #222220
-$background-color: #f6f5f3
+$background-color: #F8F7F5
 $link-color: $primary-color
 $border-color: #e9e9e9
