--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -122,7 +122,7 @@
               <h2>{{ group }}</h2>
               <ul>
                 {% for post in site.posts | sort_by_title %}
-                  {% if post.framework == group %}
+                  {% if post.category == group %}
                     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
                   {% elsif group == 'Miscellanea' %}
                     {% unless site.groups contains post.framework %}
